--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .special-font {
-  font-family: Corey Anderson;
+  font-family: TypeTogether, Veronika Burian, José Scaglione;
+  font-style: italic;
 }
 .special-fonts {
   font-family: TypeTogether, Veronika Burian;
